# themis

./: .gitignore  LICENSE  README.md  VerticalLabel.py  atlas_fit_lines.yaml  cam_config.py  create_inversion_file.py  create_inversion_file_single.py  data_classes.py  datasets.py  display_scan.py  environment.yml  getWidgetColors.py  plot_raw.py  plot_reduced.py  plot_v.py  pyproject.toml  reduce_raw_test.py  spatial_scale_determination.py  style_themis.py  test.py  test_inversion.py  test_pca.py  test_telluric_shifts.py  test_tellurics.py  themis_data_reduction.py  themis_datasets.py  themis_datasets_2025.py  themis_display_scan.py  themis_display_scan_intensity.py  themis_display_v.py  themis_tools.py
configs/: atlas_fit_config_cam1.yml  atlas_fit_config_cam2.yml  atlas_fit_config_cam3.yml  calibration_data_2025-07-05.toml  calibration_data_sr_2025-07-05.toml  calibration_data_ti_2025-07-05.toml  formation_dataset_2025-07-05.toml  formation_dataset_sr_2025-07-05.toml  formation_dataset_ti_2025-07-05.toml  sample_dataset_2025-07-07.toml  sample_dataset_sr_2025-07-07.toml  sample_dataset_sr_2025-07-08.toml  sample_dataset_ti_2025-07-07.toml  sample_dataset_ti_2025-07-08.toml  spot_dataset_2025-07-07.toml  spot_dataset_sr_2025-07-07.toml
idl/: run_voigt_as.pro  test_input.pro
scripts/: create_inversion_file.py  create_inversion_file_single.py  determine_image_shifts.py  extract_delta_offsets  generate_wl_calibration  inspect_line_levels.py  measurement_procedure.py  pipeline_documentation.py  plot_raw.py  plot_v.py  process_formation_height_line_levels.py  run_spectroflat
tests/: determine_image_shifts.py  gauss_test.py  old_flat_reduction  reduce_formation_height.py  reduce_l0_test.py  reduce_l0_to_l1_test.py  reduce_l1_to_l2_test.py  reduce_l2_to_l3_test.py  reduce_l3_to_l4_test.py  reduce_limb.py  reduce_raw_test.py  reduce_raw_to_l0_test.py  reduce_spot.py  test.py  test_amend_spectroflat.py  test_atlas_fit_window.py  test_blos_inversion.py  test_desmiling.py  test_desmiling_quality.py  test_frame_alignment.py  test_inspect_fits_io.py  test_pca.py  (+6 more)
(+27 files in other folders)
