[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "themis"
version = "0.1.0"
description = "Code for analyzing THEMIS data"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Windsurf THEMIS", email = "noreply@example.com" }]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*"]
