[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "themis"
version = "0.2.0"
description = "Code for reducing and analyzing THEMIS data"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Franziska Zeuner", email = "zeuner@irsol.ch" }]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*"]
