[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "themis"
version = "0.3.0"
description = "Code for reducing and analyzing THEMIS data"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Franziska Zeuner", email = "zeuner@irsol.ch" }]
license = { file = "LICENSE" }
dependencies = [
    "astropy==7.1.1",
    "imageio==2.37.2",
    "lazy-loader==0.4",
    "matplotlib==3.10.8",
    "mpl-point-clicker==0.4.1",
    "networkx==3.6.1",
    "numpy>=2.4.4",
    "pandas==3.0.0",
    "pyqt6==6.10.2",
    "pyqt6-qt6==6.10.2",
    "pyyaml==6.0.3",
    "qollib==0.1.3",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy>=1.17.1",
    "spectator @ git+https://github.com/fzeuner/spectator.git",
    "spectroflat==2.1.0",
    "spyder>=6.1.4",
    "tifffile==2026.1.28",
    "tqdm==4.67.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*"]
